Update index.html and manifest.json for improved branding and metadata; change app name to "Pickup Point" and enhance Open Graph and Twitter tags

--- a/index.html
+++ b/index.html
@@ -5,13 +5,34 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
+		<link rel="apple-touch-icon" href="/android-chrome-192x192.png" />
+		<link rel="manifest" href="/manifest.json" />
+
+		<!-- Primary Meta Tags -->
+		<title>Pickup Point</title>
+		<meta name="title" content="Pickup Point" />
 		<meta
 			name="description"
-			content="Web site created using create-react-app"
+			content="Software para la venta y gestión de productos Online utilizando el servicio de Flow.cl para los pagos digitales"
 		/>
-		<link rel="apple-touch-icon" href="/logo192.png" />
-		<link rel="manifest" href="/manifest.json" />
-		<title>React App</title>
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" />
+		<meta property="og:title" content="Pickup Point" />
+		<meta
+			property="og:description"
+			content="Software para la venta y gestión de productos Online utilizando el servicio de Flow.cl para los pagos digitales"
+		/>
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" />
+		<meta property="twitter:title" content="Pickup Point" />
+		<meta
+			property="twitter:description"
+			content="Software para la venta y gestión de productos Online utilizando el servicio de Flow.cl para los pagos digitales"
+		/>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
